Change icon and styles.

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -51,6 +51,7 @@
     max-width: initial;
     transform: none;
     box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.05);
+    background: #F3F8FC;
 
     &-item {
       font-size: 1em;
