--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -9,7 +9,6 @@
   }
 
   &__form {
-    flex-grow: 1;
     background: #F7F7F7;
     border: 1px solid #E8E8E8;
     border-radius: 5px;
@@ -65,9 +64,13 @@
         align-items: flex-start;
         margin-right: 20px;
 
+        @media screen and (max-width: 768px) {
+          margin-right: 10px;
+        }
+
         > svg {
           height: 15px;
-          width: 15px;
+          width: 16px;
         }
 
         > div {
@@ -84,7 +87,7 @@
 
 
     span, a {
-      margin-bottom: 4px;
+      margin-bottom: 7px;
     }
 
     a {
@@ -108,7 +111,7 @@
 
     @media screen and (max-width: 768px){
       width: 100%;
-      margin-bottom: 50px;
+      margin-bottom: 20px;
     }
   }
 
