--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -37,12 +37,14 @@
     z-index: 1;
     max-width: 680px;
     width: 100%;
-    box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 80vh;
     box-sizing: border-box;
+    max-height: 80vh;
+    overflow-y: auto;
   }
 
   &__overlay {
@@ -69,7 +71,7 @@
       height: 60px;
       font-size: 35px;
       border-radius: 0 0 0 5px;
-      box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.4);
       background: white;
       font-weight: bold;
       color: #333;
@@ -111,11 +113,13 @@
       background: white;
       width: 100%;
       justify-content: space-between;
+      align-items: center;
 
       img {
         display: inline-block;
-        height: 46px;
-        margin: 6px 15px;
+        width: 40vw;
+        max-width: 200px;
+        margin: 15px;
       }
 
       div {
@@ -136,6 +140,28 @@
       min-width: 110vw;
       min-height: 110vh;
     }
+  }
+
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    position: absolute;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #F7F7F7;
+    border-radius: 0 5px 0 0;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #E8E8E8;
+    cursor: pointer;
+    border-radius: 0 5px 0 0;
+  }
+
+  ::-webkit-scrollbar-thumb:window-inactive {
+    background-color: #E8E8E8;
+    cursor: pointer;
   }
 }
 
