--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -4,18 +4,16 @@
   left: 0;
   z-index: 3;
   background: white;
-  width: 100%;
+  padding: 20px 15px;
+  border-radius: 0 0 5px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 110px;
-  transform: translate(-50%, -50%) rotate(-45deg) scale(0.9);
-  box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.4);
 
   &__image {
-    transform: translate(0px, 100px) rotate(45deg);
-    height: 120px;
-    width: auto;
+    width: 250px;
+    height: auto;
   }
 
   &__layer-1 {
@@ -41,6 +39,9 @@
   }
 
   @media screen and (max-width: 768px) {
-    transform: translate(-50%, -50%) rotate(-45deg) scale(0.7);
+    &__image {
+      width: 40vw;
+      max-width: 200px;
+    }
   }
 }
