--- a/src/components/Offer/Offer.scss
+++ b/src/components/Offer/Offer.scss
@@ -9,11 +9,15 @@
 
   p {
     font-size: 1.1em;
-    margin: 20px 0;
+    margin: 10px 0;
     font-weight: bold;
 
+    &:first-child {
+      margin-top: 20px;
+    }
+
     &:last-child {
-      font-size: 1.2em;
+      font-size: 1em;
       text-align: center;
     }
   }
@@ -25,7 +29,7 @@
   }
 
   &__list {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
 
@@ -38,8 +42,9 @@
       min-width: 190px;
       flex-grow: 1;
       margin: 0 10px 10px 0;
-      padding: 10px;
+      padding: 5px;
       box-sizing: border-box;
+      text-align: center;
     }
   }
 }
