--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -43,8 +43,11 @@
     align-items: center;
     min-height: 80vh;
     box-sizing: border-box;
-    max-height: 80vh;
-    overflow-y: auto;
+
+    @media screen and (min-width: 769px) {
+      max-height: 80vh;
+      overflow-y: auto;  
+    }
   }
 
   &__overlay {
