--- a/src/components/Realisations/Realisations.scss
+++ b/src/components/Realisations/Realisations.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
 
+  .inner {
+    padding: 30px 30px 80px;
+  }
+
   &__list {
     display: flex;
     flex-direction: column;
